<?xml version="1.0" encoding="UTF-8"?>
<!--
	Copyright (c) Contributors to the Eclipse Foundation

	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.

	SPDX-License-Identifier: Apache-2.0
 -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.osgi</groupId>
	<artifactId>plurl.osgi</artifactId>
	<version>${revision}</version>
	<description>Plurl API for multiplexing URL handlers</description>
	<name>plurl.osgi</name>
	<packaging>jar</packaging>

	<properties>
		<!-- Version also in @Version in package-info.java -->
		<revision>0.1.0-SNAPSHOT</revision>
		<project.build.outputTimestamp>1980-02-01T00:00:00Z</project.build.outputTimestamp>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<java.release>8</java.release>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<osgi.annotation.version>8.1.0</osgi.annotation.version>
		<junit-version>4.13.2</junit-version>
	</properties>

	<url>https://www.osgi.org</url>
	<organization>
		<name>Eclipse Foundation</name>
		<url>https://www.eclipse.org</url>
	</organization>
	<licenses>
		<license>
			<name>Apache-2.0</name>
			<comments>Apache License, Version 2.0</comments>
			<url>https://opensource.org/licenses/apache2.0.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/eclipse-osgi-technology/plurl-osgi</url>
		<connection>scm:git:https://github.com/eclipse-osgi-technology/plurl-osgi.git</connection>
		<developerConnection>scm:git:git@github.com:eclipse-osgi-technology/plurl-osgi.git</developerConnection>
		<tag>${revision}</tag>
	</scm>
	<developers>
		<developer>
			<id>tjwatson</id>
			<name>Thomas Watson</name>
			<email>tjwatson@us.ibm.com</email>
			<url>https://github.com/tjwatson</url>
			<organization>IBM</organization>
			<organizationUrl>https://developer.ibm.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>America/Chicago</timezone>
		</developer>
	</developers>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/eclipse-osgi-technology/plurl-osgi/issues</url>
	</issueManagement>
	<mailingLists>
		<mailingList>
			<name>OSGi Users List</name>
			<post>osgi-users@eclipse.org</post>
			<archive>http://www.eclipse.org/lists/osgi-users</archive>
		</mailingList>
	</mailingLists>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>osgi.annotation</artifactId>
				<version>${osgi.annotation.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>biz.aQute.bnd</groupId>
					<artifactId>bnd-maven-plugin</artifactId>
					<version>7.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>verify</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.5.0</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<phase>verify</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<detectJavaApiLink>false</detectJavaApiLink>
						<doclint>none</doclint>
						<notimestamp>true</notimestamp>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.1.0</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.13</version>
					<extensions>true</extensions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.5.0</version>
					<configuration>
						<flattenMode>oss</flattenMode>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten-clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>biz.aQute.bnd</groupId>
				<artifactId>bnd-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>bnd-process</id>
						<goals>
							<goal>bnd-process</goal>
						</goals>
						<configuration>
							<packagingTypes>jar</packagingTypes>
							<manifestPath>${project.build.directory}/BND.MF</manifestPath>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--add-opens java.base/sun.net.www.protocol.jar=plurl.osgi --add-opens java.base/java.net=plurl.osgi</argLine>
				</configuration>
				<executions>
					<execution>
						<id>execute-tests</id>
						<goals>
							<goal>test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>java-release</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<maven.compiler.release>${java.release}</maven.compiler.release>
			</properties>
		</profile>
		<profile>
			<id>ossrh</id>
			<properties>
				<skipTests>true</skipTests>
				<maven.test.skip>true</maven.test.skip>
				<bnd.baseline.skip>true</bnd.baseline.skip>
				<bnd.resolve.skip>true</bnd.resolve.skip>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<distributionManagement>
				<snapshotRepository>
					<id>ossrh</id>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
				</snapshotRepository>
			</distributionManagement>
		</profile>
	</profiles>

</project>
